--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cypress": "^14.0.1",
     "jest": "^29.7.0"
   },
   "dependencies": {
@@ -49,6 +50,7 @@
     "deepmerge": "^4.3.1",
     "detect-newline": "^3.1.0",
     "diff-sequences": "^29.6.3",
+    "ejs": "^3.1.10",
     "electron-to-chromium": "^1.5.82",
     "emittery": "^0.13.1",
     "emoji-regex": "^8.0.0",
@@ -59,6 +61,7 @@
     "execa": "^5.1.1",
     "exit": "^0.1.2",
     "expect": "^29.7.0",
+    "express": "^4.21.2",
     "fast-json-stable-stringify": "^2.1.0",
     "fb-watchman": "^2.0.2",
     "fill-range": "^7.1.1",
